--- a/app/src/main/res/drawable/indicator_bg.xml
+++ b/app/src/main/res/drawable/indicator_bg.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<?xml version="1.0" encoding="utf-8"?><!--Changes background color for circular indicator in carousel -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/colorApp" />
+    <corners android:radius="20dp" />
+</shape>
