--- a/app/src/main/res/drawable/unselected_indicator_drawable.xml
+++ b/app/src/main/res/drawable/unselected_indicator_drawable.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<?xml version="1.0" encoding="utf-8"?><!--Changes background color for unselected circular indicator in carousel -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/colorAccent" />
+    <corners android:radius="20dp" />
+</shape>
