--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/white"
-    tools:context="ke.co.venturisys.rubideliveryapp.fragments.HomeFragment">
+    tools:context=".fragments.HomeFragment">
 
     <LinearLayout
         android:id="@+id/input_linear_layout_search"
@@ -35,6 +35,7 @@
             android:layout_weight="9"
             android:padding="@dimen/general_padding"
             android:textColorHint="@color/colorApp"
+            app:errorTextAppearance="@style/error_appearance"
             app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
 
             <EditText
@@ -45,6 +46,7 @@
                 android:hint="@string/hint_search"
                 android:inputType="text"
                 android:singleLine="true"
+                android:textColorHint="@color/colorApp"
                 android:textSize="16sp" />
 
         </android.support.design.widget.TextInputLayout>
@@ -69,7 +71,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
                 app:expandedTitleTextAppearance="@android:color/transparent"
@@ -80,15 +81,18 @@
                     android:layout_height="wrap_content"
                     android:background="@android:color/white">
 
-                    <ImageView
-                        android:id="@+id/backdrop"
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/offer_view_pager"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:adjustViewBounds="true"
-                        android:contentDescription="@string/today_s_offer_image_description"
-                        android:fitsSystemWindows="true"
-                        android:scaleType="centerCrop"
-                        app:layout_collapseMode="parallax" />
+                        android:layout_height="match_parent" />
+
+                    <me.relex.circleindicator.CircleIndicator
+                        android:id="@+id/indicator"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_alignParentBottom="true"
+                        app:ci_drawable="@drawable/indicator_bg"
+                        app:ci_drawable_unselected="@drawable/unselected_indicator_drawable" />
 
                     <Button
                         android:id="@+id/offerBtn"
