--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -38,4 +38,10 @@
             android:title="@string/nav_log_out" />
     </group>
 
+    <item
+        android:id="@+id/nav_creator_link"
+        android:title="@string/hint_advert">
+
+    </item>
+
 </menu>
