--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="colorGoogle">#DB4437</color>
     <color name="colorProgressBar">#303F9F</color>
     <color name="colorWeb">#FF4081</color>
+    <color name="colorDialogTitle">#FF6F00</color>
 </resources>
