--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,6 +48,11 @@
         <item name="android:textColor">@color/colorApp</item>
     </style>
 
+    <!-- Set color of floating hint to white -->
+    <style name="WhiteTextAppearance.App.TextInputLayout" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
     <!-- Set color of floating hint -->
     <style name="TextAppearance.App.WhiteTextInputLayout" parent="@android:style/TextAppearance">
         <item name="android:textColor">@color/colorAccent</item>
