--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,51 +7,9 @@
     android:background="@android:color/white"
     tools:context=".fragments.HomeFragment">
 
-    <LinearLayout
+    <include
         android:id="@+id/input_linear_layout_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/general_padding"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/search_image_view"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginEnd="0dp"
-            android:layout_marginStart="@dimen/general_padding"
-            android:layout_marginTop="7dp"
-            android:layout_weight="1"
-            android:contentDescription="@string/search_button_description"
-            android:src="@drawable/ic_search" />
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_search"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/item_offset"
-            android:layout_weight="9"
-            android:padding="@dimen/general_padding"
-            android:textColorHint="@color/colorApp"
-            app:errorTextAppearance="@style/error_appearance"
-            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">
-
-            <EditText
-                android:id="@+id/input_search"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/white"
-                android:hint="@string/hint_search"
-                android:inputType="text"
-                android:singleLine="true"
-                android:textColorHint="@color/colorApp"
-                android:textSize="16sp" />
-
-        </android.support.design.widget.TextInputLayout>
-
-    </LinearLayout>
+        layout="@layout/search_layout" />
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/main_content"
