--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -38,9 +38,17 @@
             android:title="@string/nav_log_out" />
     </group>
 
-    <item
-        android:id="@+id/nav_creator_link"
-        android:title="@string/hint_advert">
+    <item android:title="@string/nav_others">
+
+        <menu>
+            <item
+                android:id="@+id/nav_delete_account"
+                android:title="@string/nav_delete_account" />
+
+            <item
+                android:id="@+id/nav_creator_link"
+                android:title="@string/hint_advert" />
+        </menu>
 
     </item>
 
