--- a/app/src/main/res/layout-land/fragment_profile.xml
+++ b/app/src/main/res/layout-land/fragment_profile.xml
@@ -29,7 +29,7 @@
                 android:contentDescription="@string/profile_image_description"
                 android:cropToPadding="true"
                 android:padding="5dp"
-                app:srcCompat="@android:drawable/sym_def_app_icon" />
+                app:srcCompat="@drawable/avatar" />
 
             <!--<ImageView-->
             <!--android:layout_width="wrap_content"-->
@@ -166,5 +166,14 @@
         android:textSize="16sp"
         app:layout_anchor="@id/profile_relative_layout1"
         app:layout_anchorGravity="bottom|center" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-7dp"
+        android:indeterminate="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
