--- a/app/src/main/res/layout/activity_profile_image.xml
+++ b/app/src/main/res/layout/activity_profile_image.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="center"
             android:contentDescription="@string/profile_image_description"
             app:layout_anchorGravity="center"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@drawable/avatar" />
 
         <Button
             android:id="@+id/edit_profile_photo"
@@ -35,6 +35,20 @@
             android:textAllCaps="false"
             android:textSize="20sp" />
 
+        <Button
+            android:id="@+id/update_profile_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="10dp"
+            android:background="@color/black"
+            android:text="@string/update_changes"
+            android:textAllCaps="false"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:visibility="gone" />
+
     </RelativeLayout>
 
     <android.support.design.widget.FloatingActionButton
@@ -45,5 +59,14 @@
         app:layout_anchor="@id/edit_profile_photo"
         app:layout_anchorGravity="end"
         app:srcCompat="@drawable/ic_share" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-7dp"
+        android:indeterminate="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 </android.support.design.widget.CoordinatorLayout>
