--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -35,7 +35,7 @@
             android:layout_weight="1"
             android:contentDescription="@string/profile_image_description"
             android:paddingBottom="@dimen/nav_header_vertical_spacing"
-            app:srcCompat="@android:drawable/sym_def_app_icon" />
+            app:srcCompat="@drawable/avatar" />
 
         <ScrollView
             android:layout_width="0dp"
