Integration of GraphQL

--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -81,11 +81,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/white"
-                    android:hint="@string/email_address_placeholder"
                     android:inputType="textEmailAddress"
                     android:singleLine="true"
                     android:textColorHint="@color/colorApp"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    tools:ignore="LabelFor" />
 
             </android.support.design.widget.TextInputLayout>
 
