--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -51,7 +51,7 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/name_relative_layout"
+                    android:id="@+id/first_name_relative_layout"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_marginBottom="@dimen/item_offset"
@@ -64,7 +64,7 @@
                     android:visibility="gone">
 
                     <ImageView
-                        android:id="@+id/name_image_view"
+                        android:id="@+id/first_name_image_view"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
@@ -76,22 +76,74 @@
                         android:src="@drawable/ic_pencil" />
 
                     <android.support.design.widget.TextInputLayout
-                        android:id="@+id/input_layout_name"
+                        android:id="@+id/input_layout_first_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/item_offset"
-                        android:layout_toEndOf="@id/name_image_view"
+                        android:layout_toEndOf="@id/first_name_image_view"
                         android:padding="@dimen/general_padding"
                         android:textColorHint="@color/colorAccent"
                         app:errorTextAppearance="@style/error_appearance"
                         app:hintTextAppearance="@style/WhiteTextAppearance.App.TextInputLayout">
 
                         <EditText
-                            android:id="@+id/input_name"
+                            android:id="@+id/input_first_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/colorText"
-                            android:hint="@string/name_placeholder"
+                            android:hint="@string/first_name_placeholder"
+                            android:inputType="text"
+                            android:singleLine="true"
+                            android:textColor="@color/black"
+                            android:textColorHint="@color/colorAccent"
+                            android:textSize="18sp" />
+
+                    </android.support.design.widget.TextInputLayout>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/last_name_relative_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="@dimen/item_offset"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="@dimen/item_offset"
+                    android:layout_weight="1"
+                    android:background="@color/colorText"
+                    android:baselineAligned="false"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:id="@+id/last_name_image_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="0dp"
+                        android:layout_marginStart="@dimen/item_offset"
+                        android:layout_marginTop="7dp"
+                        android:contentDescription="@string/username_image_description"
+                        android:src="@drawable/ic_pencil" />
+
+                    <android.support.design.widget.TextInputLayout
+                        android:id="@+id/input_layout_last_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="@dimen/item_offset"
+                        android:layout_toEndOf="@id/last_name_image_view"
+                        android:padding="@dimen/general_padding"
+                        android:textColorHint="@color/colorAccent"
+                        app:errorTextAppearance="@style/error_appearance"
+                        app:hintTextAppearance="@style/WhiteTextAppearance.App.TextInputLayout">
+
+                        <EditText
+                            android:id="@+id/input_last_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@color/colorText"
+                            android:hint="@string/last_name_placeholder"
                             android:inputType="text"
                             android:singleLine="true"
                             android:textColor="@color/black"
